test/tests/compiler/16_characters_and_strings/invalid_types/string_initializer_too_long_nested_static.plx
#  You can't initialize a char array from a string literal
#  * that's too long to fit in it.
#  * This goes for sub-arrays and static arrays too.
pub array: [3][3]char = $("a", "bcde")

pub fn main(none) i32 {

    return nil
}
